--- a/online-egitim.html
+++ b/online-egitim.html
@@ -471,15 +471,15 @@
             { ad: "Değmen Benim Gamlı Yaslı Gönlüme", dosya: "o.jpg" },
             { ad: "Denizin Dibinde Hatçam", dosya: "p.jpg" },
             { ad: "Kütahyanın Pınarları", dosya: "r.jpg" },
-            { ad: "Dostum Dostum", dosya: "s.png?v=1" }, 
+            { ad: "Dostum Dostum", dosya: "s.png" }, 
             { ad: "Han Sarhoş Hancı Sarhoş", dosya: "t.jpg" },
             { ad: "Altın Yüzüğüm Kırıldı", dosya: "u.jpg" }
         ];
 
         // --- 5. PARMAK EGZERSİZLERİ ---
         const parmakEgzersizleri = [
-            { ad: "Alıştırma 1", dosya: "aliştirma-1.png" },
-            { ad: "Alıştırma 2", dosya: "aliştirma-2.png" },
+            { ad: "Alıştırma 1", dosya: "alistirma-1.png" },
+            { ad: "Alıştırma 2", dosya: "alistirma-2.png" },
             { ad: "4 Parmak Etüdü 1", dosya: "4-parmak-etutdu1.png" },
             { ad: "4 Parmak Etüdü 2", dosya: "4-parmak-etudu2.png" }
         ];
