--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
             <ul id="anaMenu">
                 <li><a href="index.html" style="color: var(--accent);">ANA SAYFA</a></li>
                 <li><a href="hakkinda.html">HAKKINDA</a></li>
+                <li><a href="online-egitim.html">ONLINE EĞİTİM</a></li>
                 <li><a href="notalar.html">NOTALAR</a></li>
                 <li><a href="siirler.html">ŞİİRLER</a></li>
                 <li><a href="konserler.html">KONSERLER</a></li>
