--- a/siirler.html
+++ b/siirler.html
@@ -128,6 +128,7 @@
             <ul id="anaMenu">
                 <li><a href="index.html">ANA SAYFA</a></li>
                 <li><a href="hakkinda.html">HAKKINDA</a></li>
+                <li><a href="online-egitim.html">ONLINE EĞİTİM</a></li>
                 <li><a href="notalar.html">NOTALAR</a></li>
                 <li><a href="siirler.html" class="active">ŞİİRLER</a></li>
                 <li><a href="konserler.html">KONSERLER</a></li>
