--- a/hakkinda.html
+++ b/hakkinda.html
@@ -194,6 +194,7 @@
             <ul id="anaMenu">
                 <li><a href="index.html">ANA SAYFA</a></li>
                 <li><a href="hakkinda.html" class="active">HAKKINDA</a></li>
+                <li><a href="online-egitim.html">ONLINE EĞİTİM</a></li>
                 <li><a href="notalar.html">NOTALAR</a></li>
                 <li><a href="siirler.html">ŞİİRLER</a></li>
                 <li><a href="konserler.html">KONSERLER</a></li>
