--- a/notalar.html
+++ b/notalar.html
@@ -162,6 +162,7 @@
             <ul id="anaMenu">
                 <li><a href="index.html">ANA SAYFA</a></li>
                 <li><a href="hakkinda.html">HAKKINDA</a></li>
+                <li><a href="online-egitim.html">ONLINE EĞİTİM</a></li>
                 <li><a href="notalar.html" class="active">NOTALAR</a></li>
                 <li><a href="siirler.html">ŞİİRLER</a></li>
                 <li><a href="konserler.html">KONSERLER</a></li>
