--- a/konserler.html
+++ b/konserler.html
@@ -32,6 +32,7 @@
             font-family: 'Montserrat', sans-serif; 
             font-weight: 300;
             background: var(--bg-dark); /* Arka plan rengi */
+            background-image: var(--bg-gradient); /* Gradyan eklemesi */
             color: var(--text); 
             line-height: 1.8;
             display: flex;
@@ -41,7 +42,7 @@
 
         /* --- NAVİGASYON --- */
         nav {
-            background: #000000; /* Düz siyah (Garanti olsun diye) */
+            background: #000000;
             padding: 20px 0;
             position: sticky;
             top: 0;
@@ -90,7 +91,6 @@
         .page-header {
             text-align: center;
             padding: 80px 0 40px;
-            /* Animasyon kaldırıldı */
         }
         
         .page-header h1 {
@@ -126,7 +126,6 @@
             padding: 50px;
             border: 1px solid rgba(197, 160, 89, 0.1);
             position: relative;
-            /* Animasyon kaldırıldı */
         }
         
         .spotlight-section::before {
@@ -326,6 +325,7 @@
             <ul id="anaMenu">
                 <li><a href="index.html">ANA SAYFA</a></li>
                 <li><a href="hakkinda.html">HAKKINDA</a></li>
+                <li><a href="online-egitim.html">ONLINE EĞİTİM</a></li>
                 <li><a href="notalar.html">NOTALAR</a></li>
                 <li><a href="siirler.html">ŞİİRLER</a></li>
                 <li><a href="konserler.html" class="active">KONSERLER</a></li>
