--- a/online-egitim.html
+++ b/online-egitim.html
@@ -242,8 +242,8 @@
             <div class="features-grid">
                 <div class="feature-card"><i class="fas fa-home"></i><h4>Evin Ortamında Ders Rahatlığı</h4><p>İşten eve döndüğünüzde, trafiğe girmeden ve kurs saatlerine yetişme stresi yaşamadan bağlamanızı elinize alın.</p></div>
                 <div class="feature-card"><i class="fas fa-moon"></i><h4>Mesai Sonrası Sanat</h4><p>Çoğu kurs akşam 19:00'da kapılarını kapatır. Biz ise tam o saatlerde başlıyoruz.</p></div>
-                <div class="feature-card"><i class="fas fa-user-tie"></i><h4>16+ Yetişkin Grubu</h4><p>Sadece yetişkinlerle çalışarak, ortak bir disiplin ve sanat anlayışı içinde verimli bir süreç yönetiyoruz.</p></div>
-                <div class="feature-card"><i class="fab fa-whatsapp"></i><h4>Kesintisiz İletişim</h4><p>Ders bittiğinde bağımız kopmaz. Portal üzerinden haftalık notlara ulaşabilir, WhatsApp üzerinden video gönderebilirsiniz.</p></div>
+                <div class="feature-card"><i class="fas fa-user-tie"></i><h4>Premium Öğrenci Portalı</h4><p>Bu bölümde, yalnızca kendinize özel verilen şifre ile erişebileceğiniz ders materyalleri yer almaktadır. Tüm içerikler, öğrenme sürecini desteklemek amacıyla sesli ve görsel materyallerle hazırlanmıştır. Materyaller düzenli olarak güncellenmekte ve seviyelere göre yapılandırılmaktadır.</p></div>
+                <div class="feature-card"><i class="fab fa-whatsapp"></i><h4>Kesintisiz İletişim</h4><p>Ders bittiğinde bağımız kopmaz, Dilediğiniz zaman WhatsApp üzerinden ödevlerinizi gönderip, kafanıza takılan soruları sorup, videolarınızı gönderebilirsiniz. Bu özelliğe sadece öğrenci portalı üzerinden erişim sağlayabilirsiniz.</p></div>
             </div>
             <div class="apply-container">
                 <h3 style="text-align: center; margin-bottom: 25px;">BAŞVURU FORMU</h3>
