--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <meta name="description" content="Mahmut Burak ASLANTAŞ ile profesyonel online bağlama eğitimi. Ders notları, nota arşivi, dikte çalışmaları ve kişiye özel öğrenci portalına buradan ulaşın.">
+
+<meta property="og:title" content="Online Bağlama Eğitimi | Mahmut Burak ASLANTAŞ">
+<meta property="og:description" content="Bağlama eğitiminize dijital bir boyut kazandırın. Materyallere ve ders dökümanlarına anında erişin.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://baglamagram.com.tr/online-egitim.html">
+<meta property="og:image" content="https://i.hizliresim.com/h6g4amm.jpg"> <meta property="og:locale" content="tr_TR">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Online Bağlama Eğitimi | Mahmut Burak ASLANTAŞ">
+<meta name="twitter:description" content="Ders notları, notalar ve dikte çalışmalarıyla online bağlama portalı.">
+<meta name="twitter:image" content="https://i.hizliresim.com/h6g4amm.jpg"> ```
+
     <link rel="shortcut icon" href="ikonn.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
