--- a/index.html
+++ b/index.html
@@ -360,7 +360,16 @@
             "Sabırla Bekleyen, taş üstüne gül açtırır. - Mahmut Burak ASLANTAŞ",
             "Müziğin olduğu yerde kötülük barınmaz. - Cervantes",
             "Gönül kimi severse, aşk onda güzeldir. - Neşet Ertaş",
-            "Türküler, şiirlerin kanatlanmış halidir.",
+            "Vakit nakit değil candır, geçen her an imtihandır. - Mahmut Burak ASLANTAŞ",
+            "Yüksek uçan alçak konar, gurur insanı tez yakar.",
+            "Hüzün de bir misafirdir; gelir, geçer, izi kalır. - Mahmut Burak ASLANTAŞ",
+            "Gülü incitme dalında, sözü incitme dilinde. - Mahmut Burak ASLANTAŞ",
+            "Vakit nakit değil candır, geçen her an imtihandır. - Mahmut Burak ASLANTAŞ",
+            "Vakit nakit değil candır, geçen her an imtihandır. - Mahmut Burak ASLANTAŞ",
+            "Vakit nakit değil candır, geçen her an imtihandır. - Mahmut Burak ASLANTAŞ",
+            "Vakit nakit değil candır, geçen her an imtihandır. - Mahmut Burak ASLANTAŞ",
+            "Vakit nakit değil candır, geçen her an imtihandır. - Mahmut Burak ASLANTAŞ",
+            "Vakit nakit değil candır, geçen her an imtihandır. - Mahmut Burak ASLANTAŞ",
             "Bağlama, Anadolu'nun sesidir; duymasını bilene çok şey anlatır.",
             "Sanat, görüneni tekrarlamak değil; görünür kılmaktır. - Paul Klee",
             "Yoruldum artık sevmekten, yar derdi ile yaş dökmekten... - M.B. Aslantaş",
