--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <div class="insta-overlay"><i class="fas fa-heart"></i></div>
             </a>
             <a href="https://www.instagram.com/baglamagram" target="_blank" class="insta-item">
-                <img src="https://i.hizliresim.com/hcxh8kf.JPG" alt="Insta 4">
+                <img src="https://i.hizliresim.com/l1dfhwg.jpg" alt="Insta 4">
                 <div class="insta-overlay"><i class="fas fa-heart"></i></div>
             </a>
         </div>
