--- a/index.html
+++ b/index.html
@@ -393,11 +393,11 @@
         
         <div class="insta-grid">
             <a href="https://www.instagram.com/baglamagram" target="_blank" class="insta-item">
-                <img src="https://i.hizliresim.com/olj28le.jpg" alt="Insta 1">
+                <img src="https://i.hizliresim.com/ne9q1cu.jpg" alt="Insta 1">
                 <div class="insta-overlay"><i class="fas fa-heart"></i></div>
             </a>
             <a href="https://www.instagram.com/baglamagram" target="_blank" class="insta-item">
-                <img src="https://i.hizliresim.com/6vp28ri.JPG" alt="Insta 2">
+                <img src="https://i.hizliresim.com/ps617qs.JPG" alt="Insta 2">
                 <div class="insta-overlay"><i class="fas fa-heart"></i></div>
             </a>
             <a href="https://www.instagram.com/baglamagram" target="_blank" class="insta-item">
@@ -405,7 +405,7 @@
                 <div class="insta-overlay"><i class="fas fa-heart"></i></div>
             </a>
             <a href="https://www.instagram.com/baglamagram" target="_blank" class="insta-item">
-                <img src="https://i.hizliresim.com/hcxh8kf.JPG" alt="Insta 4">
+                <img src="https://i.hizliresim.com/l1dfhwg.jpg" alt="Insta 4">
                 <div class="insta-overlay"><i class="fas fa-heart"></i></div>
             </a>
         </div>
