--- a/index.html
+++ b/index.html
@@ -447,8 +447,16 @@
             "Gülü incitme dalında, sözü incitme dilinde. - Mahmut Burak ASLANTAŞ",
             "Bağlama, Anadolu'nun sesidir; duymasını bilene çok şey anlatır.",
             "Sanat, görüneni tekrarlamak değil; görünür kılmaktır. - Paul Klee",
-            "Yoruldum artık sevmekten, yar derdi ile yaş dökmekten... - M.B. Aslantaş",
-            "Her adımda aşk, her perdede hasret vardır."
+            "Yoruldum artık sevmekten, yar derdi ile yaş dökmekten... - Mahmut Burak ASLANTAŞ",
+            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
+            "Söz okun yaydan çıkışıdır; hedefini bulmazsa döner sahibini vurur. - Mahmut Burak ASLANTAŞ",
+            "Vuslatı bekleyen göz, aradaki dağları dert etmez. - Mahmut Burak ASLANTAŞ",
+            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
+            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
+            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
+            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
+            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
+            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ"
         ];
 
         function gununSozunuGetir() {
