--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
         // --- GÜNÜN SÖZÜ OTOMASYONU ---
         const sozler = [
-            "Sabırla bekleyen, taş üstüne gül açtırır. - Mahmut Burak ASLANTAŞ",
+            "Sabırla bekleyen, taş üstüne gül açtırır, acele eden, eceline kucak açtırır. - Mahmut Burak ASLANTAŞ",
             "Müziğin olduğu yerde kötülük barınmaz. - Cervantes",
             "Gönül kimi severse, aşk onda güzeldir. - Neşet Ertaş",
             "Vakit nakit değil candır, geçen her an imtihandır. - Mahmut Burak ASLANTAŞ",
@@ -451,11 +451,9 @@
             "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
             "Söz okun yaydan çıkışıdır; hedefini bulmazsa döner sahibini vurur. - Mahmut Burak ASLANTAŞ",
             "Vuslatı bekleyen göz, aradaki dağları dert etmez. - Mahmut Burak ASLANTAŞ",
-            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
-            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
-            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
-            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
-            "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ",
+            "Cahilin övgüsü, zehirli bala benzer, yerken tatlı gelir ama sonra öldürür; alimin yergisi ise acı ilaca benzer, içerken zorlar ama sonunda güldürür. - Mahmut Burak ASLANTAŞ",
+            "Yolu yürüyen değil, yolda eriyen bilir hakikati; menzile varmak nasip işidir, yolda sadakatle kalan er kişidir. - Mahmut Burak ASLANTAŞ",
+            "Gönül aynası buğulanmışsa, baktığın yüzde kusur arama; önce kendi nefesini tut ki, karşındakinin sureti berraklaşsın. - Mahmut Burak ASLANTAŞ",
             "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ"
         ];
 
