--- a/online-egitim.html
+++ b/online-egitim.html
@@ -397,7 +397,7 @@
                             <div class="chat-box" id="aiChatBox">
                                 <div class="chat-message ai">
                                     <strong>BurakAI Hoca:</strong><br>
-                                    Selam! Hoş geldin. Bugün hangi parça üzerinde çalışıyoruz? İster bir nota fotoğrafı at, ister çaldığın videoyu gönder, birlikte bakalım. Sazına sağlık şimdiden!
+                                    Gel bakalım evladım, hoş geldin. Sazın kucağındaysa, gönlün de aşka hazırsa aşamayacağımız yokuş yok. 'Yorulduk' demek yok, 'yapamıyorum' demek yok. Ben senin her adımda yanındayım. Hadi bismillah diyelim, sor bakalım kafana takılan şey nedir?
                                 </div>
                             </div>
                             <div class="chat-input-area">
@@ -500,10 +500,10 @@
         // --- 1. ÖĞRENCİ VERİTABANI (YENİLENMİŞ VE TEMİZLENMİŞ) ---
         const ogrenciler = {
             "ZWxpZmthcm1hbjEyMw==": { ad: "RWxpZg==", soyad: "S0FSTUFO" },            
-            "bWFobXV0YnVyYWs=": { ad: "TWFobXV0IEJ1cmFr", soyad: "QVNMQU5UQcWe" },     
-            "aGFsaWxndWxheWRpbjEyMw==": { ad: "SGFsaWw=", soyad: "R8OcTEFZRElO" },    
+            "bWFobXV0YnVyYWs=": { ad: "TWFobXV0IEJ1cmFr", soyad: "QVNMQU5UQcWe" },      
+            "aGFsaWxndWxheWRpbjEyMw==": { ad: "SGFsaWw=", soyad: "R8OcTEFZRElO" },     
             "YW1hbnNlbmRlY2Fubw==": { ad: "R8Oka3R1xJ8=", soyad: "UEFJTlRFUg==" }, 
-            "dGVreW9sZGV2cmlt": { ad: "RmVyaGF0ZSBDaXZhbmU=", soyad: "QkFLQU5F" }     
+            "dGVreW9sZGV2cmlt": { ad: "RmVyaGF0ZSBDaXZhbmU=", soyad: "QkFLQU5F" }      
         };
 
         // --- 2. DİKTE SES DOSYALARI ---
