--- a/online-egitim.html
+++ b/online-egitim.html
@@ -728,12 +728,12 @@
 
             try {
                 // 2. ADIM: TAM URL DEĞİL, RELATIVE PATH KULLAN
-                const response = await fetch('/api/chat', {
+               const response = await fetch('https://baglamagram.vercel.app/api/chat', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ 
                         message: msgText || "Şu gönderdiğim görsele bir bak hocam.", 
-                        image: imageToSend 
+                        image: imageToSend
                     })
                 });
 
