--- a/online-egitim.html
+++ b/online-egitim.html
@@ -219,7 +219,7 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <i class="fas fa-robot"></i>
-                    <h4>BurakAI ile Eğitim</h4>
+                    <h4>Yapay Zeka ile Eğitim</h4>
                     <p>Yapay zeka destekli müzik öğretmeniniz BurakAI ile eğitimde yeni bir dönem. Bu teknolojiyi kullanmak ve derslerinize entegre etmek için aşağıdaki formu doldurarak ders paketlerimizi satın alabilirsiniz.</p>
                 </div>
 
