--- a/online-egitim.html
+++ b/online-egitim.html
@@ -91,7 +91,7 @@
         .sidebar.collapsed .menu-link { justify-content: center; }
         .hamburger-btn { font-size: 1.5rem; color: var(--accent); cursor: pointer; margin-bottom: 30px; align-self: flex-start; }
         .user-info { margin-bottom: 40px; border-bottom: 1px solid #333; padding-bottom: 20px; }
-        .user-name { color: var(--accent); font-family: 'Century Gothic', sans-serif; font-size: 1.4rem; font-weight: normal; line-height: 1.2; }
+        .user-name { color: var(--accent); font-family: 'Avenir', sans-serif; font-size: 1.4rem; font-weight: normal; line-height: 1.2; }
         .premium-badge { font-size: 0.7rem; color: #fff; background: #333; padding: 4px 8px; border-radius: 4px; display: inline-block; margin-top: 10px; letter-spacing: 1px; text-transform: uppercase; }
         .menu-link { display: flex; align-items: center; gap: 15px; color: #bbb; text-decoration: none; padding: 12px; margin-bottom: 5px; border-radius: 5px; transition: 0.3s; cursor: pointer;}
         .menu-link:hover, .menu-link.active { background: #222; color: var(--accent); }
@@ -125,7 +125,7 @@
         #removeImage { color: red; cursor: pointer; text-align: center; display: block; margin-top: 5px; font-size: 0.8rem; }
 
         /* DASHBOARD GRIDLERİ */
-        .dashboard-header h1 { font-family: 'Century Gothic', sans-serif; color: var(--accent); margin-bottom: 30px; border-bottom: 1px solid #333; padding-bottom: 10px; font-weight: normal; }
+        .dashboard-header h1 { font-family: 'Avenir', sans-serif; color: var(--accent); margin-bottom: 30px; border-bottom: 1px solid #333; padding-bottom: 10px; font-weight: normal; }
         .dashboard-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 30px; }
         .dash-card { background: #111; border: 1px solid #333; padding: 40px; text-align: center; border-radius: 8px; cursor: pointer; transition: 0.3s; position: relative; overflow: hidden; }
         .dash-card:hover { border-color: var(--accent); transform: translateY(-5px); }
