--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1403,5 +1403,29 @@
         });
 
     </script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBIx9TujKPX82NaWXGh2QTxyG6TEQ-abi8",
+    authDomain: "baglamagram-portal.firebaseapp.com",
+    projectId: "baglamagram-portal",
+    storageBucket: "baglamagram-portal.firebasestorage.app",
+    messagingSenderId: "498044667137",
+    appId: "1:498044667137:web:e1a75ef1a0f0edf1330700",
+    measurementId: "G-RD5H01SSTH"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+    
 </body>
 </html>
