--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1471,6 +1471,7 @@ function saveProfilePhoto(input) {
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
 
+    // --- İSİM LİSTESİ (ÖĞRENCİLERİN ADINI ÖNCE BURAYA EKLEYİP SONRA FİREBASE'YE EKLE)---
   const ogrenciListesi = {
       "gokboy09@gmail.com": { ad: "Gökhan", soyad: "BOY" },
       "brkslntss@gmail.com": { ad: "Burak", soyad: "ASLANTAŞ" }
