--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1422,10 +1422,11 @@
       }
   }
 
-  // Şifreli Öğrenci Listesi
+  // YENİ ÖĞRENCİLERİN AD-SOYADINI İLK BAŞTA BURAYA GİRECEKSİN.
   const ogrenciListesi = {
-      "Z29rYm95MDlAZ21haWwuY29t": { ad: "R8OkaGFu", soyad: "Qk9Z" },
-      "YnJrc2xudHNzQGdtYWlsLmNvbQ==": { ad: "QnVyYWs=", soyad: "QVNMQU5UQcWe" }
+      "Z29rYm95MDlAZ21haWwuY29t": { ad: "R29rMg==", soyad: "UEFJTlRFUg==" },
+        "elifin-epostası-gelecek@xyz.com": { ad: "RWxpZg==", soyad: "S0FSTUFO" },
+      "YnJrc2xudHNzQGdtYWlsLmNvbQ==": { ad: "TWFobXV0IEJ1cmFr", soyad: "QVNMQU5UQcWe" }
   };
 
   // --- FOTOĞRAF KAYDETME (VERİTABANINA) ---
