--- a/online-egitim.html
+++ b/online-egitim.html
@@ -405,7 +405,7 @@
                     </div>
 
                     <a href="https://wa.me/905335060921" target="_blank" class="whatsapp-sidebar-btn">
-                        <i class="fab fa-whatsapp"></i> <span>Soru Sor / Ödev Gönder</span>
+                        <i class="fab fa-whatsapp"></i> <span>Acil Durumlar İçin</span>
                     </a>
                 </div>
 
