--- a/online-egitim.html
+++ b/online-egitim.html
@@ -429,13 +429,13 @@
                                 <i class="fas fa-robot"></i>
                                 <h3>BurakAI Hoca (beta)</h3>
                                 <p style="font-size: 0.9rem; opacity: 0.9;">Yapay Zeka Entegrasyonlu İlk Müzik Eğitim Platformu.</p>
-                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;">İcranı yükle, anında yorumla.</p>
+                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;">7/24 Emrinizdeyim.</p>
                             </div>
 
                             <div class="dash-card" onclick="sayfaGoster('exam-categories-view')">
                                 <i class="fas fa-graduation-cap"></i>
-                                <h3>YETENEK SINAVI HAZIRLIK</h3>
-                                <p>Dikte çalışmaları, soru çözümleri.</p>
+                                <h3>YETENEK SINAVINA HAZIRLIK</h3>
+                                <p>Konservatuvar, Müzik öğretmenliği ve GSL'ye hazırlık için ikte çalışmaları, soru çözümleri.</p>
                             </div>
                             
                             <div class="dash-card live-class-card" onclick="startLiveClass()">
