--- a/online-egitim.html
+++ b/online-egitim.html
@@ -421,7 +421,7 @@
                                 <img src="baglama-ikon.png" class="custom-icon" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-block'">
                                 <i class="fas fa-music" style="display:none; font-size:3rem; color:var(--yellow-portal); margin-bottom:20px;"></i>
                                 <h3>BAĞLAMA EĞİTİMİ</h3>
-                                <p>Ders notları, notalar ve egzersizler.</p>
+                                <p>Ders notları, notalar ve egzersizleri.</p>
                             </div>
 
                             <div class="dash-card ai-card" onclick="sayfaGoster('ai-mentor-view')">
@@ -429,19 +429,19 @@
                                 <i class="fas fa-robot"></i>
                                 <h3>BurakAI Hoca (beta)</h3>
                                 <p style="font-size: 0.9rem; opacity: 0.9;">Yapay Zeka Entegrasyonlu İlk Müzik Eğitim Platformu.</p>
-                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;">7/24 Emrinizdeyim.</p>
+                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;">7/24 Emrinizdeyim. (Türkiye'de Bir İlk!!)</p>
                             </div>
 
                             <div class="dash-card" onclick="sayfaGoster('exam-categories-view')">
                                 <i class="fas fa-graduation-cap"></i>
                                 <h3>YETENEK SINAVINA HAZIRLIK</h3>
-                                <p>Konservatuvar, Müzik öğretmenliği ve GSL'ye hazırlık için ikte çalışmaları, soru çözümleri.</p>
+                                <p>Konservatuvar, Müzik öğretmenliği ve GSL'ye hazırlık için öğretim materyalleri.</p>
                             </div>
                             
                             <div class="dash-card live-class-card" onclick="startLiveClass()">
                                 <i class="fas fa-video"></i>
                                 <h3>CANLI DERS</h3>
-                                <p>Sanal sınıfa bağlanarak canlı derse katılın.</p>
+                                <p>Sanal sınıfa bağlanarak canlı derse katılın. (Türkiye'de Bir İlk!!)</p>
                             </div>
                         </div>
                     </div>
