--- a/online-egitim.html
+++ b/online-egitim.html
@@ -429,7 +429,7 @@
                                 <i class="fas fa-robot"></i>
                                 <h3>BurakAI Hoca (beta)</h3>
                                 <p style="font-size: 0.9rem; opacity: 0.9;">Yapay Zeka Entegrasyonlu İlk Müzik Eğitim Platformu.</p>
-                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;">7/24 Emrinizdeyim. (Türkiye'de Bir İlk!!)</p>
+                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;">7/24 Emrinizdeyim. Türkiye'de Bir İlk!</p>
                             </div>
 
                             <div class="dash-card" onclick="sayfaGoster('exam-categories-view')">
@@ -441,7 +441,7 @@
                             <div class="dash-card live-class-card" onclick="startLiveClass()">
                                 <i class="fas fa-video"></i>
                                 <h3>CANLI DERS</h3>
-                                <p>Sanal sınıfa bağlanarak canlı derse katılın. (Türkiye'de Bir İlk!!)</p>
+                                <p>Sanal sınıfa bağlanarak canlı derse katılın. Türkiye'de Bir İlk!</p>
                             </div>
                         </div>
                     </div>
