--- a/online-egitim.html
+++ b/online-egitim.html
@@ -441,7 +441,8 @@
                             <div class="dash-card live-class-card" onclick="startLiveClass()">
                                 <i class="fas fa-video"></i>
                                 <h3>CANLI DERS</h3>
-                                <p>Sanal sınıfa bağlanarak canlı derse katılın. Türkiye'de Bir İlk!</p>
+                                <p>Sanal sınıfa bağlanarak canlı derse katılın.</p>
+                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;">Türkiye'de Bir İlk!</p>
                             </div>
                         </div>
                     </div>
