--- a/index.html
+++ b/index.html
@@ -200,8 +200,6 @@
         }
         .hero h1 span { color: var(--accent); font-weight: 600; }
 
-        /* --- DÜZELTİLEN KISIM BAŞLANGIÇ --- */
-        /* Önceden genel 'span'ı etkiliyordu, şimdi sadece .author-name sınıfını etkiliyor */
         .hero-static-quote {
             max-width: 700px;
             font-family: 'Playfair Display', serif;
@@ -219,7 +217,6 @@
             font-style: normal;
             font-weight: 500;
         }
-        /* --- DÜZELTİLEN KISIM BİTİŞ --- */
 
         /* --- BUTONLAR --- */
         .cta-buttons { display: flex; gap: 25px; animation: fadeIn 2.5s ease-in-out; margin-bottom: 60px; }
@@ -395,6 +392,9 @@
         <div class="lang-dropdown" id="langDropdown">
             <a href="javascript:void(0)" onclick="changeLanguage('tr')">🇹🇷 Türkçe</a>
             <a href="javascript:void(0)" onclick="changeLanguage('en')">🇬🇧 English</a>
+            <a href="javascript:void(0)" onclick="changeLanguage('lt')">🇱🇹 Lietuvių</a>
+            <a href="javascript:void(0)" onclick="changeLanguage('de')">🇩🇪 Deutsch</a>
+            <a href="javascript:void(0)" onclick="changeLanguage('ru')">🇷🇺 Русский</a>
         </div>
     </div>
 
@@ -518,6 +518,7 @@
             menu.classList.toggle("aktif");
         }
 
+        // --- ÇEVİRİ VERİTABANI ---
         const translations = {
             tr: {
                 menu_home: "ANA SAYFA",
@@ -554,9 +555,65 @@
                 title_quote: "QUOTE OF THE DAY",
                 title_creative: "CREATIVE CORNER",
                 footer_rights: "© 2026 Mahmut Burak ASLANTAŞ. All Rights Reserved."
+            },
+            lt: {
+                menu_home: "PAGRINDINIS",
+                menu_about: "APIE MANE",
+                menu_edu: "INTERNETINĖS PAMOKOS",
+                menu_notes: "NATOS",
+                menu_poems: "EILĖRAŠČIAI",
+                menu_concerts: "KONCERTAI",
+                hero_quote: "„Tauta be meno neteko vienos iš savo gyvybinių arterijų.“",
+                hero_quote_author: "Mustafa Kemal ATATÜRK",
+                btn_concerts: "ATRASKITE KONCERTUS",
+                btn_poems: "SKAITYTI EILĖRAŠČIUS",
+                stat_lessons: "VALANDŲ INTERNETINIŲ PAMOKŲ",
+                stat_works: "ORIGINALŪS KŪRINIAI IR EILĖRAŠČIAI",
+                stat_stage: "SCENINIAI PASIRODYMAI",
+                title_quote: "DIENOS CITATA",
+                title_creative: "KŪRYBINIS KAMPELIS",
+                footer_rights: "© 2026 Mahmut Burak ASLANTAŞ. Visos teisės saugomos."
+            },
+            de: {
+                menu_home: "STARTSEITE",
+                menu_about: "ÜBER MICH",
+                menu_edu: "ONLINE-UNTERRICHT",
+                menu_notes: "NOTEN",
+                menu_poems: "GEDICHTE",
+                menu_concerts: "KONZERTE",
+                hero_quote: "„Eine Nation ohne Kunst hat eine ihrer lebenswichtigen Adern verloren.“",
+                hero_quote_author: "Mustafa Kemal ATATÜRK",
+                btn_concerts: "KONZERTE ENTDECKEN",
+                btn_poems: "GEDICHTE LESEN",
+                stat_lessons: "STUNDEN ONLINE-UNTERRICHT",
+                stat_works: "ORIGINALWERKE & GEDICHTE",
+                stat_stage: "BÜHNENAUFTRITTE",
+                title_quote: "ZITAT DES TAGES",
+                title_creative: "KREATIVE ECKE",
+                footer_rights: "© 2026 Mahmut Burak ASLANTAŞ. Alle Rechte vorbehalten."
+            },
+            ru: {
+                menu_home: "ГЛАВНАЯ",
+                menu_about: "ОБО МНЕ",
+                menu_edu: "ОНЛАЙН-ОБУЧЕНИЕ",
+                menu_notes: "НОТЫ",
+                menu_poems: "СТИХИ",
+                menu_concerts: "КОНЦЕРТЫ",
+                hero_quote: "«Нация без искусства лишилась одной из своих жизненно важных артерий».",
+                hero_quote_author: "Мустафа Кемаль АТАТЮРК",
+                btn_concerts: "ОТКРЫТЬ КОНЦЕРТЫ",
+                btn_poems: "ЧИТАТЬ СТИХИ",
+                stat_lessons: "ЧАСОВ ОНЛАЙН-ЗАНЯТИЙ",
+                stat_works: "ОРИГИНАЛЬНЫЕ РАБОТЫ И СТИХИ",
+                stat_stage: "СЦЕНИЧЕСКИЕ ВЫСТУПЛЕНИЯ",
+                title_quote: "ЦИТАТА ДНЯ",
+                title_creative: "ТВОРЧЕСКИЙ УГОЛОК",
+                footer_rights: "© 2026 Махмут Бурак АСЛАНТАШ. Все права защищены."
             }
         };
 
+        // --- GÜNÜN SÖZÜ OTOMASYONU (TÜM DİLLER) ---
+        // TR
         const sozler = [
             "Sabırla bekleyen, taş üstüne gül açtırır, acele eden, eceline kucak açtırır. - Mahmut Burak ASLANTAŞ",
             "Müziğin olduğu yerde kötülük barınmaz. - Cervantes",
@@ -577,6 +634,7 @@
             "Gölgen boyunu aşsa da, güneş batınca hükmü biter. - Mahmut Burak ASLANTAŞ"
         ];
 
+        // EN
         const sozlerEN = [
             "He who waits with patience makes roses bloom on stone; he who hurries embraces his end. - Mahmut Burak ASLANTAŞ",
             "Where there is music, there is no evil. - Cervantes",
@@ -597,6 +655,69 @@
             "Even if your shadow exceeds your height, its rule ends when the sun sets. - Mahmut Burak ASLANTAŞ"
         ];
 
+        // LT (Lietuvių)
+        const sozlerLT = [
+            "Tas, kuris kantriai laukia, priverčia rožes žydėti ant akmens; tas, kuris skuba, apkabina savo pabaigą. - Mahmut Burak ASLANTAŞ",
+            "Kur skamba muzika, ten nėra blogio. - Servantesas",
+            "Ką širdis myli, tas joje gražus. - Neşet Ertaş",
+            "Laikas ne pinigai, o gyvenimas; kiekviena praeinanti akimirka yra išbandymas. - Mahmut Burak ASLANTAŞ",
+            "Kas aukštai skrenda, žemai leidžiasi; puikybė greitai sudegina.",
+            "Liūdesys taip pat yra svečias; jis ateina, praeina, bet palieka pėdsaką. - Mahmut Burak ASLANTAŞ",
+            "Nežeisk rožės ant šakos, nežeisk žodžio ant liežuvio. - Mahmut Burak ASLANTAŞ",
+            "Baglama yra Anatolijos balsas; ji daug pasako tiems, kurie moka klausytis.",
+            "Menas neatkartoja to, kas matoma; greičiau jis padaro matoma. - Paul Klee",
+            "Aš pavargau mylėti, lieti ašaras su mylimojo skausmu... - Mahmut Burak ASLANTAŞ",
+            "Net jei tavo šešėlis viršija tavo ūgį, jo valdymas baigiasi, kai nusileidžia saulė. - Mahmut Burak ASLANTAŞ",
+            "Žodis yra kaip strėlė, paliekanti lanką; jei ji nepataiko į tikslą, ji grįžta ir sužeidžia savo šeimininką. - Mahmut Burak ASLANTAŞ",
+            "Akis, laukianti susitikimo, nepaiso kalnų, esančių tarp jų. - Mahmut Burak ASLANTAŞ",
+            "Neišmanėlio pagyrimas yra kaip nuodingas medus, saldus valgyti, bet vėliau mirtinas; išminčiaus kritika yra kaip kartūs vaistai, sunku nuryti, bet galiausiai priverčia nusišypsoti. - Mahmut Burak ASLANTAŞ",
+            "Ne tas, kuris eina keliu, o tas, kuris ištirpsta kelyje, žino tiesą. - Mahmut Burak ASLANTAŞ",
+            "Jei širdies veidrodis yra miglotas, neieškok trūkumų veide, kurį matai; pirmiausia sulaikyk kvėpavimą, kad vaizdas prieš tave išsigrynintų. - Mahmut Burak ASLANTAŞ",
+            "Net jei tavo šešėlis viršija tavo ūgį, jo valdymas baigiasi, kai nusileidžia saulė. - Mahmut Burak ASLANTAŞ"
+        ];
+
+        // DE (Deutsch)
+        const sozlerDE = [
+            "Wer geduldig wartet, lässt Rosen auf Stein blühen; wer eilt, umarmt sein Ende. - Mahmut Burak ASLANTAŞ",
+            "Wo Musik ist, da ist kein Böses. - Cervantes",
+            "Wen das Herz liebt, in dem ist die Liebe schön. - Neşet Ertaş",
+            "Zeit ist kein Geld, sondern Leben; jeder vergehende Moment ist eine Prüfung. - Mahmut Burak ASLANTAŞ",
+            "Wer hoch fliegt, landet tief; Stolz verbrennt einen schnell.",
+            "Kummer ist auch ein Gast; er kommt, er geht, aber er hinterlässt eine Spur. - Mahmut Burak ASLANTAŞ",
+            "Verletze nicht die Rose am Zweig, verletze nicht das Wort auf der Zunge. - Mahmut Burak ASLANTAŞ",
+            "Die Baglama ist die Stimme Anatoliens; sie erzählt denen viel, die zuzuhören wissen.",
+            "Kunst gibt nicht das Sichtbare wieder, sondern macht sichtbar. - Paul Klee",
+            "Ich bin müde zu lieben, Tränen zu vergießen mit dem Schmerz des Geliebten... - Mahmut Burak ASLANTAŞ",
+            "Auch wenn dein Schatten deine Größe übertrifft, endet seine Herrschaft, wenn die Sonne untergeht. - Mahmut Burak ASLANTAŞ",
+            "Ein Wort ist wie ein Pfeil, der den Bogen verlässt; wenn es sein Ziel verfehlt, kehrt es zurück, um seinen Besitzer zu treffen. - Mahmut Burak ASLANTAŞ",
+            "Das Auge, das auf das Wiedersehen wartet, kümmert sich nicht um die Berge dazwischen. - Mahmut Burak ASLANTAŞ",
+            "Das Lob des Unwissenden ist wie vergifteter Honig, süß zu essen, aber später tödlich; die Kritik des Weisen ist wie bittere Medizin, schwer zu schlucken, aber am Ende bringt sie dich zum Lächeln. - Mahmut Burak ASLANTAŞ",
+            "Nicht der, der den Weg geht, sondern der, der im Weg verschmilzt, kennt die Wahrheit. - Mahmut Burak ASLANTAŞ",
+            "Wenn der Spiegel des Herzens neblig ist, suche nicht nach Fehlern im Gesicht, das du siehst; halte zuerst deinen eigenen Atem an, damit das Bild vor dir klar wird. - Mahmut Burak ASLANTAŞ",
+            "Auch wenn dein Schatten deine Größe übertrifft, endet seine Herrschaft, wenn die Sonne untergeht. - Mahmut Burak ASLANTAŞ"
+        ];
+
+        // RU (Русский)
+        const sozlerRU = [
+            "Тот, кто терпеливо ждет, заставляет розы цвести на камне; тот, кто спешит, обнимает свой конец. - Махмут Бурак АСЛАНТАШ",
+            "Где музыка, там нет зла. - Сервантес",
+            "Кого любит сердце, в том любовь прекрасна. - Нешет Эрташ",
+            "Время — это не деньги, а жизнь; каждое проходящее мгновение — это испытание. - Махмут Бурак АСЛАНТАШ",
+            "Кто высоко летает, тот низко садится; гордость сжигает быстро.",
+            "Печаль тоже гость; она приходит, проходит, но оставляет след. - Махмут Бурак АСЛАНТАШ",
+            "Не рань розу на ветке, не рань слово на языке. - Махмут Бурак АСЛАНТАШ",
+            "Баглама — это голос Анатолии; она многое говорит тем, кто умеет слушать.",
+            "Искусство не воспроизводит видимое, а делает его видимым. - Пауль Клее",
+            "Я устал любить, лить слезы от боли любимой... - Махмут Бурак АСЛАНТАШ",
+            "Даже если тень превышает твой рост, ее власть заканчивается, когда заходит солнце. - Махмут Бурак АСЛАНТАШ",
+            "Слово подобно стреле, выпущенной из лука; если она не попадает в цель, то возвращается и ранит своего владельца. - Махмут Бурак АСЛАНТАШ",
+            "Глаз, ждущий встречи, не замечает гор между ними. - Махмут Бурак АСЛАНТАШ",
+            "Похвала невежды подобна отравленному меду, сладкому на вкус, но смертельному впоследствии; критика мудреца подобна горькому лекарству, которое трудно проглотить, но в конце концов оно заставляет улыбнуться. - Махмут Бурак АСЛАНТАШ",
+            "Не тот, кто идет по пути, а тот, кто растворяется в пути, знает истину. - Махмут Бурак АСЛАНТАШ",
+            "Если зеркало сердца затуманено, не ищи изъянов в лице, которое видишь; сначала задержи дыхание, чтобы образ перед тобой прояснился. - Махмут Бурак АСЛАНТАШ",
+            "Даже если тень превышает твой рост, ее власть заканчивается, когда заходит солнце. - Махмут Бурак АСЛАНТАШ"
+        ];
+
         function gununSozunuGetir() {
             const currentLang = localStorage.getItem("selectedLang") || "tr";
             const bugun = new Date();
@@ -604,12 +725,19 @@
             const fark = bugun - baslangic;
             const gunSayisi = Math.floor(fark / (1000 * 60 * 60 * 24));
             
-            const targetList = (currentLang === "en") ? sozlerEN : sozler;
+            // Dile göre doğru listeyi seç
+            let targetList = sozler; // Varsayılan
+            if (currentLang === "en") targetList = sozlerEN;
+            else if (currentLang === "lt") targetList = sozlerLT;
+            else if (currentLang === "de") targetList = sozlerDE;
+            else if (currentLang === "ru") targetList = sozlerRU;
+
             const secilenSoz = targetList[gunSayisi % targetList.length];
             
             document.getElementById("gununSozu").innerText = `“${secilenSoz}”`;
         }
 
+        // --- DİL FONKSİYONLARI ---
         function toggleLanguageMenu() {
             document.getElementById("langDropdown").classList.toggle("active");
         }
@@ -620,7 +748,7 @@
             document.querySelectorAll("[data-lang]").forEach(element => {
                 const key = element.getAttribute("data-lang");
                 if (data[key]) {
-                    element.innerText = data[key];
+                    element.innerHTML = data[key];
                 }
             });
 
@@ -630,9 +758,9 @@
         }
 
         window.onload = function() {
-            const savedLang = localStorage.getItem("selectedLang") || "tr";
-            if(savedLang === "en") {
-                changeLanguage("en");
+            const savedLang = localStorage.getItem("selectedLang");
+            if(savedLang && translations[savedLang]) {
+                changeLanguage(savedLang);
             } else {
                 gununSozunuGetir();
             }
