--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
             document.querySelectorAll("[data-lang]").forEach(element => {
                 const key = element.getAttribute("data-lang");
                 if (data[key]) {
-                    element.innerHTML = data[key];
+                    element.innerText = data[key];
                 }
             });
 
