--- a/online-egitim.html
+++ b/online-egitim.html
@@ -522,13 +522,16 @@
                             <div class="dash-card" onclick="sayfaGoster('exam-categories-view')">
                                 <i class="fas fa-graduation-cap"></i>
                                 <h3 data-lang="card_exam_title">YETENEK SINAVINA HAZIRLIK</h3>
-                                <p data-lang="card_exam_desc">Konservatuvar, Müzik öğretmenliği ve GSL'ye hazırlık için öğretim materyalleri.</p>
+                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;" data-lang="card_ai_desc2">Konservatuvar, Müzik öğretmenliği ve GSL'ye hazırlık için öğretim materyalleri.</p>
                             </div>
                             
                             <div class="dash-card live-class-card" onclick="startLiveClass()">
                                 <i class="fas fa-video"></i>
                                 <h3 data-lang="card_live_title">CANLI DERS</h3>
-                                <p data-lang="card_live_desc">Sanal sınıfa bağlanarak canlı derse katılın.</p>
+                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;" data-lang="card_ai_desc2">Sanal sınıfa bağlanarak canlı derse katılın.</p>
+                                <p style="font-size: 0.8rem; color: #aaa; margin-top: 10px;" data-lang="card_ai_desc2">Türkiye'de Bir İlk!</p>
+
+
                                 
                             </div>
                         </div>
