--- a/online-egitim.html
+++ b/online-egitim.html
@@ -660,6 +660,10 @@
                                 <span class="cat-title">Bilgi Yarışması</span>
                                 <span class="cat-desc">Halk müziği bilginizi test edin ve yarışın.</span>
                             </div>
+                            <div class="cat-box" onclick="sayfaGoster('memory-game-view')">
+                                <span class="cat-title">Müzik Hafıza</span>
+                                <span class="cat-desc">Kartları eşleştir, hafızanı güçlendir. (3-10 Yaş)</span>
+                            </div>
                         </div>
                     </div>
 
@@ -702,6 +706,21 @@
                             </div>
                             <input type="hidden" id="current-answer-img" value="">
                         </div>
+                    </div>
+
+                    <div id="memory-game-view" class="view-section">
+                        <div class="dashboard-header" style="display: flex; justify-content: space-between;">
+                            <h2>Müzik Hafıza Oyunu</h2>
+                            <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">← Çıkış</button>
+                        </div>
+                        
+                        <iframe 
+                            src="bilgi-yarismasi/hafiza.html" 
+                            width="100%" 
+                            height="750" 
+                            style="border: none; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); margin-top: 10px;"
+                            title="Hafıza Oyunu">
+                        </iframe>
                     </div>
 
                 </div>
